--- a/navigation/arya_blog/2025-3-11-MCQ2020.md
+++ b/navigation/arya_blog/2025-3-11-MCQ2020.md
@@ -15,7 +15,7 @@ After observing the Content and Skills Performance, areas I need improvement are
 
 For 3.6 conditionals, I wasn't able to apply my knowledge of conditionals to the question, I plan on strengthening my knowledge and possibly watching a youtube video on it. For 5.2, I didnt understand what the digital divide was. After researching, I learned that the digital divide is essentially the gulf between people who have access to internet, and people who do not. Lastly, for 1.4, I got a majority of the questions right in that topic with the exception of a problem involving a procedure with if else statements. I believe this was simply reading the answer choices wrong, as I was able to rework this problem and get it right.
 
-<img src="/home/aryas/nighthawk/portfolio_2025/images/MC.png" alt="Image" width="600">
+<img src="https://i.imgur.com/huQ20VQ.png" alt="Image" width="600">
 
 # Question 58: AnyPairs Procedure
 
